<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="fill_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#550000"
        android:text="@string/chapterhead"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="34dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter3" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="19dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter4" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter5" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter6" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter7" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#222222"
                android:text="@string/chapter8" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/chapter9" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/chapter10" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/chapter11" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="56dp"
                android:layout_marginLeft="22dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/chapter12" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/start_button1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/greenbutton"
        android:textStyle="bold"
        android:textSize="12pt"
        android:text="@string/go_label" />

    <Button
        android:id="@+id/content"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignTop="@+id/start_button1"
        android:background="@drawable/greenbutton"
        android:text="View List of Characters" />

</RelativeLayout>