<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="38dp"
        android:textStyle="italic"
        android:textColor="#228B22"
        android:text="@string/writePrompt_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/writePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/write"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/definition"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="123dp"
        android:background="@drawable/greenbutton"
        android:textSize="9pt"
        android:text="@string/draw_label" />

    <Button
        android:id="@+id/finish_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@drawable/greenbutton"
        android:text="@string/finish_current_label" />

    <TextView
        android:id="@+id/wp_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Practice Writing"
        android:background="#550000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>